--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <button class="download-button">Скачать приложение</button>
             </div>
             <div class="app-image">
-                <img src="app-preview.png" alt="Превью приложения">
+                <img src="https://raw.githubusercontent.com/The-F-Project/thefproject/refs/heads/main/3D_books_icon_for_educational_app_with_thematic_dimensions-removebg-preview.png" alt="Превью приложения">
             </div>
         </div>
 
