--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная страница | Название организации</title>
+    <title>The F PRoject<title>
     <link rel="stylesheet" href="style.css">
     <style>
         body {
@@ -102,12 +102,12 @@
 
         <div class="app-section">
             <div class="app-info">
-                <h2>Наше приложение</h2>
+                <h2>EduCA</h2>
                 <p>
                     Наше приложение помогает вам делать что-то полезное и интересное. 
                     Скачайте его прямо сейчас и начните использовать все возможности!
                 </p>
-                <button class="download-button">Скачать приложение</button>
+                <a href="https://the-f-project.github.io/thefproject/app1" class="download-button">Скачать приложение</a>
             </div>
             <div class="app-image">
                 <img src="https://raw.githubusercontent.com/The-F-Project/thefproject/refs/heads/main/3D_books_icon_for_educational_app_with_thematic_dimensions-removebg-preview.png" alt="Превью приложения">
