--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The F PRoject<title>
+    <title>The F Project<title>
     <link rel="stylesheet" href="style.css">
     <style>
         body {
@@ -92,9 +92,9 @@
     </style>
 </head>
 <body>
-    <!-- Шапка -->
+
     <div class="header">
-        <h1>Название организации</h1>
+        <h1>The F Project</h1></h1>
     </div>
 
 
